1. Collection API Улучшения[#74521]