@@ -2,7 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -59,13 +58,13 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertList() {
         ConvertList2Array convertList = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2, 3});
-        list.add(new int[]{4, 5});
-        list.add(new int[]{6});
-        list.add(new int[]{7, 8});
-        list.add(new int[]{9});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<int[]> list = List.of(
+                new int[]{1, 2, 3},
+                new int[]{4, 5},
+                new int[]{6},
+                new int[]{7, 8},
+                new int[]{9});
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         List<Integer> result = convertList.convert(list);
         assertThat(result, is(expect));
     }
